grammar.txt
program = statements ;
statements = statement {statement} ;
statement = declaration | assignment | definition ;
definition = "func" id "(" parameters ")" block ;
parameters = type id {"," type id} ;
block = "{" statements "}" ;
declaration = type id ";" ;
type = "int" ;
assignment = id "=" expression ";" ;
expression = term expression' ;
expression' = "+" term expression' | "-" term expression' | epsilon ;
term = factor term' ;
term' = "*" factor term' | "/" factor term' | epsilon;
factor = "(" expression ")" | id | int ;

define main() {
	int x;

	x = 0;

	if (x == 0) {
		x = x + 1;
	}

	while (x != 0) {
		x = x - 1;
	}

	square(x);

	return x;
}
